--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.0
+  firebase_messaging: ^7.0.3
   cloud_firestore: ^0.14.4
   firebase: ^7.3.3
   firebase_core: ^0.5.0
