--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,12 +13,13 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.0
-  firebase_messaging: ^7.0.3
-  cloud_firestore: ^0.14.4
   firebase: ^7.3.3
+  firebase_messaging: ^7.0.3
   firebase_core: ^0.5.0
   firebase_auth: ^0.18.4+1
+  cloud_firestore: ^0.14.4
   get_it: ^5.0.3
+  device_info: ^1.0.0
 
 dev_dependencies:
   flutter_test:
